@@ -6,6 +6,9 @@ Version 1.6.9
 - Don't log a full stacktrace when an HTTP 429 (Too Many Requests) is returned.
 - Fix parsing of Retry-After header which apparently changed to a floating point number.
 - Pass MDC context down to AsyncConnection worker threads.
+- Changed `buffer.size` default from 50 to 10.
+- When buffering is enabled, only retry sending events when the network is down or the project
+  is being throttled (HTTP 429).
 
 Version 1.6.8
 -------------
